home page and nav bar icon

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -30,13 +30,11 @@
     </style>
   </head>
 
-
 <body>
 <div class="stage" id="stage">
 
   <div class="block block-fill-height app-block-wayne"
        style="background-image: url(/assets/q.jpg)">
-
 
     <div class="block-sm-right block-xs-bottom">
       <div class="container">
@@ -52,7 +50,6 @@
                 <span>
                   Live Non-Stop FM Music of your favorite artists before their hit albums
                 </span>
-
             <audio controls src="http://oggvorbis.tb-stream.net:80/technobase.ogg"></audio>
               </span>
             </p>
@@ -61,7 +58,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="block block-inverse block-transparent py-0 app-block-grid">
 
@@ -79,7 +75,7 @@
               <div class="card card-bold card-success mb-0 app-box-shadow">
                 <img src="/assets/dsp.jpg">
                 <div class="card-block pb-5">
-                  <h4 class="mb-0"> <%= link_to 'Devi Sri Prasad ', gaali_path %></h4>
+                  <h4 class="mb-0"> <%= link_to 'Devi Sri Prasad ', rayyi_path %></h4>
                   <p class="text-serif"><em>An Indian Composer, Singer, Musician and Philanthropist</em></p>
                   <hr>
                   <p class="text-serif"><em> DSP's works are noted for integrating Indian classical music with electronic music, world music and traditional orchestral arrangements.</em></p>
@@ -241,7 +237,7 @@
             <p class="lead">
               <span class="text-ribbon">
                 <span>
-                  We stream all music videos cause we don't play games.
+                  We stream all latest music videos.
                 </span>
               </span>
             </p>
@@ -286,8 +282,6 @@
               </span>
             </h1>
 
-
-
             <div class="text-ribbon-inputs-split">
               <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="First Name">
               <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="Last Name">
@@ -301,7 +295,6 @@
       </div>
     </div>
   </div>
-
 
   <div class="block block-inverse accent-primary" id="footer">
     <div class="container">
