--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <img src="/assets/music_icon.ico" width="50" height="50" class="d-inline-block align-right" alt="Music icon">
+          <img src="/assets/music_icon.ico" width="60" height="50" class="d-inline-block align-right" alt="Music icon">
           <a class="navbar-brand" <%= link_to 'We Love Music', root_path %> </a>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" <%= link_to 'Songs', songs_path %>S<span class="sr-only">(current)</span></a>
+            <a class="nav-link" <%= link_to 'Audio Songs', songs_path %>S<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -80,13 +80,11 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Lyrics</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-
           <a class="dropdown-item" <%= link_to 'Adiga Adiga', adiga_path %></a>
           <a class="dropdown-item" <%= link_to 'Ne Kallalona', nekalla_path %></a>
           <a class="dropdown-item" <%= link_to 'Oosupodu', oosupodu_path %></a>
           <a class="dropdown-item" <%= link_to 'Malli Rava', malli_path %></a>
           <a class="dropdown-item" <%= link_to 'Break UP', teluse_path %></a>
-
         </div>
       </li>
           <li class="nav-item dropdown">
@@ -96,7 +94,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="#">A R Rahman</a>
               <a class="dropdown-item" href="#">Anirudh</a>
-              <a class="dropdown-item" href="#dsp">Devi Sri Prasad </a>
+              <a class="dropdown-item" href="#">Devi Sri Prasad </a>
               <a class="dropdown-item" href="#">Arjith Singh </a>
               <a class="dropdown-item" href="#">Honey Singh </a>
             </div>
