added new fm stations

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -50,8 +50,12 @@
                 <span>
                   Live Non-Stop FM Music of your favorite artists before their hit albums
                 </span>
-            <audio controls src="http://oggvorbis.tb-stream.net:80/technobase.ogg"></audio>
-              </span>
+
+  <audio controls src="http://50.7.99.163:11091/;"></audio></br>
+  <audio controls src="http://proxima.shoutca.st:8266/stream"></audio></br>
+  <audio controls src="http://184.154.202.243:8310/stream;"></audio>
+
+            </span>
             </p>
           </div>
         </div>
