--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -27,6 +26,10 @@
           width: 125px;
         }
 
+        .fm{
+          float: left;
+        }
+
     </style>
   </head>
 
@@ -36,7 +39,7 @@
   <div class="block block-fill-height app-block-wayne"
        style="background-image: url(/assets/q.jpg)">
 
-    <div class="block-sm-right block-xs-bottom">
+    <div class="block-sm-right block-xs-top">
       <div class="container">
         <div class="row">
           <div class="col-lg-5">
@@ -50,19 +53,31 @@
                 <span>
                   Live Non-Stop FM Music of your favorite artists before their hit albums
                 </span>
-
-  <audio controls src="http://50.7.99.163:11091/;"></audio></br>
-  <audio controls src="http://proxima.shoutca.st:8266/stream"></audio></br>
-  <audio controls src="http://184.154.202.243:8310/stream;"></audio>
-
             </span>
             </p>
           </div>
         </div>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+        <div class= "fm">
+            <h2><span class="badge badge-success">FM Stations List</span></h2>
+            <audio controls src="http://50.7.99.163:11091/;"></audio></br>
+            <audio controls src="http://proxima.shoutca.st:8266/stream"></audio></br>
+            <audio controls src="http://184.154.202.243:8310/stream;"></audio></br>
+        </div>
       </div>
     </div>
   </div>
-
   <div class="block block-inverse block-transparent py-0 app-block-grid">
 
     <div class="block-bg-clip">
@@ -98,7 +113,6 @@
                   <p class="text-serif"><em> Anirudh's works are noted for integrating Indian classical music with electronic music, world music and traditional orchestral arrangements.</em></p>
                 </div>
               </div>
-
            </div>
           </div>
         </div>
@@ -252,7 +266,7 @@
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/LQeE4hFIQqE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/bcL53pgFzSc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -272,6 +286,22 @@
 
     <div class="block-xs-middle">
       <div class="container">
+
+        <div class="audio_left">
+      <h2><span class="badge badge-success"> AB Yevaro Nee Baby</span></h2>
+      <%=audio_tag "ab.mp3", class:'audio-to-play', controls:true %>
+      </div></br>
+
+      <div class="audio_left">
+    <h2><span class="badge badge-warning">Sainika From Na Peru Surya Na Illu India</span></h2>
+    <%=audio_tag "sainika.mp3", class:'audio-to-play', controls:true %>
+      </div></br>
+
+      <div class="audio_left">
+      <h2><span class="badge badge-success"> Gaali Vaaluga</span></h2>
+      <%=audio_tag "gaali.mp3", class:'audio-to-play', controls:true %>
+        </div>
+
         <div class="row">
           <div class="col-md-6 offset-md-6">
             <h1 class="block-title mb-4">
@@ -299,20 +329,20 @@
       <div class="row text-serif">
         <div class="col-md-2 mb-4">
           <ul class="list-unstyled list-spaced">
-            <li><h4>Tech</h4></li>
-            <li class="text-muted"><em>Overview</em></li>
-            <li class="text-muted"><em>Design</em></li>
-            <li class="text-muted"><em>Display</em></li>
-            <li class="text-muted"><em>Technology</em></li>
+            <li><h4>About US</h4></li>
+            <li class="text-muted"><em>We Love Music</em></li>
+            <li class="text-muted"><em><%= link_to 'Songs', songs_path %></em></li>
+            <li class="text-muted"><em><%= link_to 'Lyrics', teluse_path %></em></li>
+            <li class="text-muted"><em><%= link_to 'FM Radio', andhra_mirchi_path %></em></li>
           </ul>
         </div>
         <div class="col-md-2 mb-4">
           <ul class="list-unstyled list-spaced">
-            <li><h4>Press</h4></li>
-            <li class="text-muted"><em>Overview</em></li>
-            <li class="text-muted"><em>Design</em></li>
-            <li class="text-muted"><em>Display</em></li>
-            <li class="text-muted"><em>Technology</em></li>
+            <li><h4>Social</h4></li>
+            <li class="text-muted"><em>Facebook</em></li>
+            <li class="text-muted"><em>Twitter</em></li>
+            <li class="text-muted"><em>Google +</em></li>
+            <li class="text-muted"><em>Skype</em></li>
           </ul>
         </div>
         <div class="col-md-2 mb-4">
@@ -326,9 +356,9 @@
         </div>
         <div class="col-md-6 mb-4">
           <ul class="list-unstyled list-spaced">
-            <li><h4>Photography</h4></li>
+            <li><h4>Quick Items</h4></li>
             <li class="text-muted">
-              <em>Background photos: <a href="#">2 Chainz by demxx</a> and <a href="#">Nicki Minaj by Jennifer</a> are shared under the <a href="#">Lil Wayne by RJ Shaughnessy</a>, and <a href="https://www.flickr.com/photos/didy_b/8150029917">Mos Def by Eddy BERTHIER</a> are public domain works. Concert portraits: <a href="https://www.flickr.com/photos/histrionicss/13951485730">Iggy Azalea by Laura Murray</a>, <a href="https://www.flickr.com/photos/32999928@N05/7213700394/">Childish Gambino by Eli Watson</a>, and <a href="#">Kid Cudi by Dana Beveridge</a> are shared under the <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0 license</a>.<a href="https://www.flickr.com/photos/jasonpersse/5710284405/"> Kanye West by Jason Persse</a> and <a href="https://www.flickr.com/photos/tamtam7683/5990345195">Nicki Minaj by tamtam7683</a> are shared under the <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0 license</a>.</em>
+              <em>Pick your favourite: <a  <%= link_to 'Oosupodu Lyrics', oosupodu_path %></a> and <a <%= link_to 'Kothaga Kothaga Song lyrics', kothaga_path %></a>,<a <%= link_to 'Audio Songs', songs_path %></a>, and <a <%= link_to 'Rayyi Rayyi Mantu', rayyi_path %></a> <a <%= link_to 'FM Radio', andhra_mirchi_path %></a>, and <a <%= link_to 'Yantrapu Lokapu', yenthara_path %></a> <%= link_to 'Ne Kallalona', nekalla_path %></a>. and <a <%= link_to 'Adiga Adiga', adiga_path %></a> are shared under the <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA 2.0 license</a>.</em>
             </li>
           </ul>
         </div>
