merise video added

--- a/app/views/welcome/merise.html.erb
+++ b/app/views/welcome/merise.html.erb
@@ -46,6 +46,9 @@
         #title{
           color: white;
         }
+        .col-md-8{
+          padding-left: 250px;
+        }
 
     </style>
   </head>
@@ -62,6 +65,14 @@
         <p class="text-serif"><em>Merise is a track from the Hello. Starring Akhil Akkineni, Kalyani Priyadarshan
 in lead roles. Composed by Anup Rubens, sung by Shreya Ghoshal and lyrics written by Chandrabose. The movie directed by Vikram K Kumar and produced by Akkineni Nagarjuna.</em></p>
         <hr>
+        <div class="row mb-3">
+          <div class="col-md-8">
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/7D-BgdPazHU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
         <p class="text-serif"><em>
         <p>Merise merise merise aa kannullo edo merise<br />
         Na manase murise murise aa sangathi naaku telusey<br />
