--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -52,9 +52,48 @@
           <p class="text-serif"><em>
 
             <h1 class="entry-title">Andhra Mirchi Radio Telugu</h1>
-            <p>
-            Andhra Mirchi Radio is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Andhra Mirchi Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Andhra Mirchi Radio listen now.</p>
+            <p>Andhra Mirchi Radio is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Andhra Mirchi Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Andhra Mirchi Radio listen now.</p>
 <audio controls src="http://184.154.202.243:8310/stream;"></audio></br>
+</div>
+</div>
+</div>
+</div>
+
+<div class="container" id="grid">
+  <div class="row">
+    <div class="col-lg-4 col-md-6">
+      <div class="row mb-3 mb-md-5">
+        <div class="col-lg-6">
+          <div class="card card-bold card-success mb-0 app-box-shadow">
+            <img src="http://radiosindia.com/images/spice-fm.jpg">
+            <div class="card-block pb-5">
+              <h4 class="mb-0"> <%= link_to 'Spice Radio ', rayyi_path %></h4>
+              <p class="text-serif"><em>Spice FM Radio is a Telugu radio having broadcasting from Andrapradesh.Listen to Spice FM Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Spice FM Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Spice FM Radio listen now.</em></p>
+              <hr>
+                <audio controls src="http://proxima.shoutca.st:8266/stream"></audio>
+                <hr>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row hidden-md-down">
+        <div class="col-lg-6">
+          <div class="card card-bold card-success mb-0 app-box-shadow">
+            <img src="http://radiosindia.com/images/radio9telugu.jpg">
+            <div class="card-block pb-5">
+              <h4 class="mb-0"> <%= link_to 'Radio 9 ', gaali_path %></h4>
+              <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
+              <hr>
+              <audio controls src="http://184.154.202.243:8310/stream;"></audio>
+              <hr>
+
+            </div>
+          </div>
+       </div>
+      </div>
+    </div>
+  </div>
+</div>
 
          <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
