--- a/app/views/welcome/rayyi.html.erb
+++ b/app/views/welcome/rayyi.html.erb
@@ -33,7 +33,9 @@
           font-family:fantasy;
           font-size: 200%;
           font-weight: 900;
-
+        }
+        #pic{
+          padding-left: 350px;
         }
         #para{
           background-color: yellow;
@@ -49,18 +51,17 @@
 
     </style>
   </head>
-
-
 <body>
 
-
-<img id="rayyi" src="/assets/rayyi.jpg" width:"100" height:"100"
+<img id="pic" src="/assets/rayyi.jpg" width:"100" height:"100"
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
       <div class="card-block pb-5">
         <p><h1 id="title">Rayyi Rayyi Mantu from Vunnadi Okate Zindagi</h1>
-
+          <p class="text-serif"><em>Starring Ram, Lavanya Tripati in lead Roles. Music is composed by DSP.
+                    </em></p>
+          <hr>
           <div class="row mb-3">
             <div class="col-md-8">
               <div class="embed-responsive embed-responsive-16by9">
