videos songs page added

--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -38,19 +38,30 @@
 
   .song_image{
     padding-left: 400px;
-
+    width: 250px;
+    height: 250px;
+  }
+  .title{
+    margin-left: 280px;
   }
 
 </style>
 </head>
 <body>
-<img class="song_image" src="http://radiosindia.com/images/andhramirchiradio.jpg" width:"100" height:"100";>
+  <div class="title">
+  <h3 class="block-title mb-4">
+    <span class="text-ribbon text-ribbon-primary">
+      <span>Stream Your Favorite Station</span>
+    </span>
+  </h3>
+  </div>
+
+<img class="song_image" src="http://www.liveradioindia.com/wp-content/uploads/2017/02/andhramirchi.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
     <div class="card-block pb-5">
           <p class="text-serif"><em>
-
             <h1 class="entry-title">Andhra Mirchi Radio Telugu</h1>
             <hr>
             <p>Andhra Mirchi Radio is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Andhra Mirchi Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Andhra Mirchi Radio listen now.</p>
@@ -61,7 +72,7 @@
 </div>
 </div>
 
-<img class="song_image" src="http://radiosindia.com/images/telugunriradio.jpg">
+<img class="song_image" src="https://lh3.googleusercontent.com/-HoWyXAOA6TVOUSrUiJ6mcIroj0xooswZjg9X_MiILsVn68PISdU-Q2ht6TuTQuGVw=h900">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -77,16 +88,15 @@
 </div>
 </div>
 
-<img class="song_image" src="http://radiosindia.com/images/radio9telugu.jpg" width:"100" height:"100";>
+<img class="song_image" src="https://mytuner.global.ssl.fastly.net/media/tvos_radios/szn8xb2Sy4.png">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
     <div class="card-block pb-5">
           <p class="text-serif"><em>
-
             <h1 class="entry-title"> Radio 9 Telugu</h1>
-            <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
             <hr>
+            <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
             <audio controls src="http://184.154.202.243:8310/stream;"></audio>
             <hr>
 </div>
@@ -94,17 +104,17 @@
 </div>
 </div>
 
-<img class="song_image" src="http://radiosindia.com/images/spice-fm.jpg" width:"100" height:"100";>
+<img class="song_image" src="https://3.bp.blogspot.com/-KAzgavopib4/Wgl3k-PV50I/AAAAAAAAFn8/6P_dOJFx5hkhT-BBsRK0OfOvbXOvRNpHQCLcBGAs/s1600/Spice%2BFM%2BTelugu%2BLive%2BStreaming%2BOnline.png" width:"100" height:"100";>
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
     <div class="card-block pb-5">
           <p class="text-serif"><em>
-
             <h1 class="entry-title">Spice FM Radio </h1>
-            <p>Spice FM Radio is a Telugu radio having broadcasting from Andrapradesh.Listen to Spice FM Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Spice FM Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Spice FM Radio listen now.</p>
             <hr>
-<audio controls src="http://proxima.shoutca.st:8266/stream;"></audio>
+            <p>Spice FM Radio is a Telugu radio having broadcasting from Andrapradesh.Listen to Spice FM Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Spice FM Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Spice FM Radio listen now.</p>
+            <audio controls src="http://proxima.shoutca.st:8266/stream;"></audio>
+<hr>
 </div>
 </div>
 </div>
