--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Roboto:100,300,400,700" rel="stylesheet">
       <link href="assets/toolkit-bold.css" rel="stylesheet">
       <link href="assets/application-bold.css" rel="stylesheet">
+      <link rel="icon" type="image/png" href="/assets/music_icon.ico">
 
     <style>
       .navbar-brand{
@@ -52,6 +53,9 @@
           </li>
           <li class="nav-item active">
             <a class="nav-link" <%= link_to 'FM Radio', andhra_mirchi_path %><span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" <%= link_to 'Video Songs', video_songs_path %><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
