--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -201,7 +201,6 @@
                           </div>
                         </div>
                         </div>
-
                         <div class="col-sm-2">
                           <div class="card">
                              <img class="card-img-top" src="/assets/adiga.jpg" alt="Card image cap">
@@ -210,8 +209,6 @@
                             </div>
                             </div>
                           </div>
-
-
           <div class="col-md-5 offset-sm-7">
             <h1 class="block-title mb-4">
               <span class="text-ribbon text-ribbon-primary">
@@ -226,12 +223,10 @@
               </span>
             </p>
           </div>
-
         </div>
       </div>
     </div>
   </div>
-
   <div class="block block-fill-height block-transparent block-inverse block-angle app-block-kanye">
     <div class="block-bg-clip">
       <div class="block-bg">
@@ -240,7 +235,6 @@
         </div>
       </div>
     </div>
-
     <div class="block-xs-middle">
       <div class="container">
         <div class="row">
@@ -262,11 +256,10 @@
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/h1bV5A0Mqq4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/-xgy9rTzUnw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
-
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
@@ -274,11 +267,9 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
-
   <div class="block block-transparent block-fill-height block-angle block-app-mosdef">
     <div class="block-bg-clip">
       <div class="block-bg">
@@ -287,25 +278,20 @@
         </div>
       </div>
     </div>
-
     <div class="block-xs-middle">
       <div class="container">
-
         <div class="audio_left">
       <h2><span class="badge badge-success"> AB Yevaro Nee Baby</span></h2>
       <%=audio_tag "ab.mp3", class:'audio-to-play', controls:true %>
       </div></br>
-
       <div class="audio_left">
     <h2><span class="badge badge-warning">Sainika From Na Peru Surya Na Illu India</span></h2>
     <%=audio_tag "sainika.mp3", class:'audio-to-play', controls:true %>
       </div></br>
-
       <div class="audio_left">
       <h2><span class="badge badge-success"> Gaali Vaaluga</span></h2>
       <%=audio_tag "gaali.mp3", class:'audio-to-play', controls:true %>
         </div>
-
         <div class="row">
           <div class="col-md-6 offset-md-6">
             <h1 class="block-title mb-4">
@@ -313,7 +299,6 @@
                 <span>Sign Up Now</span>
               </span>
             </h1>
-
             <div class="text-ribbon-inputs-split">
               <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="First Name">
               <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="Last Name">
@@ -327,13 +312,12 @@
       </div>
     </div>
   </div>
-
   <div class="block block-inverse accent-primary" id="footer">
     <div class="container">
       <div class="row text-serif">
         <div class="col-md-2 mb-4">
           <ul class="list-unstyled list-spaced">
-            <li><h4>About Us</h4></li>
+            <li><h4>Quick Links</h4></li>
             <li class="text-muted"><em><%= link_to 'We Love Music', root_path %></em></li>
             <li class="text-muted"><em><%= link_to 'Songs', songs_path %></em></li>
             <li class="text-muted"><em><%= link_to 'Lyrics', teluse_path %></em></li>
@@ -351,11 +335,11 @@
         </div>
         <div class="col-md-2 mb-4">
           <ul class="list-unstyled list-spaced">
-            <li><h4>Other</h4></li>
-            <li class="text-muted"><em>Overview</em></li>
-            <li class="text-muted"><em>Design</em></li>
-            <li class="text-muted"><em>Display</em></li>
-            <li class="text-muted"><em>Technology</em></li>
+            <li><h4>About Us</h4></li>
+            <li class="text-muted"><em>Name</em></li>
+            <li class="text-muted"><em>Email</em></li>
+            <li class="text-muted"><em>Phone</em></li>
+            <li class="text-muted"><em>Adress</em></li>
           </ul>
         </div>
         <div class="col-md-6 mb-4">
@@ -370,10 +354,5 @@
     </div>
   </div>
 </div>
-    <!-- <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/tether.min.js"></script>
-    <script src="../assets/js/toolkit.js"></script>
-    <script src="../assets/js/application.js"></script> -->
-
-    </body>
+</body>
 </html>
