--- a/app/views/welcome/malli.html.erb
+++ b/app/views/welcome/malli.html.erb
@@ -51,13 +51,9 @@
 
     </style>
   </head>
-
-
 <body>
 
 <img id="pic" src="/assets/malli.jpg" width:"100" height:"100";>
-
-
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -69,13 +65,12 @@
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/7D-i61wEtFFuc0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/i61wEtFFuc0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
         <hr>
-        <h4> Lyrics:</h4></br>
-        <p class="text-serif"><em>
+          <p class="text-serif"><em>
           <p>Ye kaalam Ye dooram<br>
   daache unchena ninne ninne<br>
   Ye gaayam Ye mounam<br>
