--- a/app/views/welcome/songs.html.erb
+++ b/app/views/welcome/songs.html.erb
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <style>
-
-    /* .audio_left{
-      padding-left: 400px;
-    } */
-.song_images{
-  float: right;
-}
+  .song_images{
+    float: right;
+    }
     .songs_pad{
       float: left;
     }
-
+    .title{
+      margin-left: 280px;
+    }
     </style>
 
 <body>
+  <div class="title">
+  <h3 class="block-title mb-4">
+    <span class="text-ribbon text-ribbon-primary">
+      <span>Enjoy Your Favorite Songs</span>
+    </span>
+  </h3>
+</div>
+
 <img class="song_images" src="/assets/agnatha.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
