--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -1,38 +1,8 @@
-<html>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="">
-
-<title>We Love Music</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Roboto:100,300,400,700" rel="stylesheet">
-  <link href="assets/toolkit-bold.css" rel="stylesheet">
-  <link href="assets/application-bold.css" rel="stylesheet">
-
+<!DOCTYPE html>
+<html lang="en">
 <style type=text/css>
 
-    body {
-      width: 1px;
-      min-width: 100%;
-      *width: 100%;
-    }
-    #stage {
-      height: 1px;
-      overflow: auto;
-      min-height: 100vh;
-    }
-
-    .navbar-brand{
-      font-family:fantasy;
-      font-size: 200%;
-      font-weight: 900;
-    }
-
-      .entry-title{
+  .entry-title{
         color: white;
       }
 
@@ -55,8 +25,7 @@
     </span>
   </h3>
   </div>
-
-<img class="song_image" src="http://www.liveradioindia.com/wp-content/uploads/2017/02/andhramirchi.jpg">
+<img class="song_image" src="http://radiosindia.com/images/andhramirchiradio.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -71,8 +40,7 @@
 </div>
 </div>
 </div>
-
-<img class="song_image" src="https://lh3.googleusercontent.com/-HoWyXAOA6TVOUSrUiJ6mcIroj0xooswZjg9X_MiILsVn68PISdU-Q2ht6TuTQuGVw=h900">
+<img class="song_image" src="http://radiosindia.com/images/telugunriradio.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -87,8 +55,7 @@
 </div>
 </div>
 </div>
-
-<img class="song_image" src="https://mytuner.global.ssl.fastly.net/media/tvos_radios/szn8xb2Sy4.png">
+<img class="song_image" src="http://radiosindia.com/images/radio9telugu.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -103,8 +70,7 @@
 </div>
 </div>
 </div>
-
-<img class="song_image" src="https://3.bp.blogspot.com/-KAzgavopib4/Wgl3k-PV50I/AAAAAAAAFn8/6P_dOJFx5hkhT-BBsRK0OfOvbXOvRNpHQCLcBGAs/s1600/Spice%2BFM%2BTelugu%2BLive%2BStreaming%2BOnline.png" width:"100" height:"100";>
+<img class="song_image" src="http://radiosindia.com/images/spice-fm.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
