--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -7,11 +7,11 @@
       }
   .song_image{
     padding-left: 400px;
-    width: 100px;
-    height: 100px;
+    width: 200;
+    height: 200;
   }
   .title{
-    margin-left: 400px;
+    margin-left: 500px;
   }
 
 </style>
