--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -6,7 +6,7 @@
         color: white;
       }
   .song_image{
-    padding-left: 400px;
+    padding-left: 500px;
     width: 200;
     height: 200;
   }
@@ -69,7 +69,7 @@
 </div>
 </div>
 </div>
-<img class="song_image" src="http://radiosindia.com/images/spice-fm.jpg" width:"100" height:"100";>
+<img class="song_image" src="http://radiosindia.com/images/spice-fm.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -79,13 +79,10 @@
             <hr>
             <p>Spice FM Radio is a Telugu radio having broadcasting from Andrapradesh.Listen to Spice FM Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Spice FM Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Spice FM Radio listen now.</p>
             <audio controls src="http://proxima.shoutca.st:8266/stream;"></audio>
-<hr>
+            <hr>
 </div>
 </div>
 </div>
 </div>
-         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
