--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -33,7 +33,7 @@
             <h1 class="entry-title">Andhra Mirchi Radio Telugu</h1>
             <hr>
             <p>Andhra Mirchi Radio is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Andhra Mirchi Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Andhra Mirchi Radio listen now.</p>
-<audio controls src="http://184.154.202.243:8310/stream;"></audio>
+<audio controls src="http://184.154.202.243:8310/stream"></audio>
 <hr>
 </div>
 </div>
@@ -63,7 +63,7 @@
             <h1 class="entry-title"> Radio 9 Telugu</h1>
             <hr>
             <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
-            <audio controls src="http://184.154.202.243:8310/stream;"></audio>
+            <audio controls src="http://184.154.202.243:8310/stream"></audio>
             <hr>
 </div>
 </div>
@@ -78,7 +78,7 @@
             <h1 class="entry-title">Spice FM Radio </h1>
             <hr>
             <p>Spice FM Radio is a Telugu radio having broadcasting from Andrapradesh.Listen to Spice FM Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Spice FM Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Spice FM Radio listen now.</p>
-            <audio controls src="http://proxima.shoutca.st:8266/stream;"></audio>
+            <audio controls src="http://proxima.shoutca.st:8266/stream"></audio>
             <hr>
 </div>
 </div>
