--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -75,7 +75,7 @@
             <h2><span class="badge badge-success">FM Station 2: Spicy Radio</span></h2>
             <audio controls src="http://proxima.shoutca.st:8266/stream"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 3: Andhra Mirchi</span></h2>
-            <audio controls src="http://184.154.202.243:8310/stream;"></audio><br></br>
+            <audio controls src="http://184.154.202.243:8310/stream"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 4: Radio 9</span></h2>
             <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio><br></br>
         </div>
