--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -11,7 +11,7 @@
     height: 200;
   }
   .title{
-    margin-left: 500px;
+    margin-left: 400px;
   }
 
 </style>
@@ -24,16 +24,16 @@
     </span>
   </h3>
   </div>
-<img class="song_image" src="http://radiosindia.com/images/andhramirchiradio.jpg">
+<img class="song_image" src="http://radiosindia.com/images/teluguone.jpg">
 <div class="row hidden-md-down">
 <div class="col-lg-12">
 <div class="card card-bold card-secondary mb-0 app-box-shadow">
     <div class="card-block pb-5">
           <p class="text-serif"><em>
-            <h1 class="entry-title">Andhra Mirchi Radio Telugu</h1>
+            <h1 class="entry-title">Telugu One</h1>
             <hr>
-            <p>Andhra Mirchi Radio is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Andhra Mirchi Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Andhra Mirchi Radio listen now.</p>
-<audio controls src="http://184.154.202.243:8310/stream"></audio>
+            <p>Telugu One is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.This Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Telugu One Radio listen now.</p>
+<audio controls src="http://173.203.133.187:9700/;"></audio>
 <hr>
 </div>
 </div>
@@ -63,7 +63,7 @@
             <h1 class="entry-title"> Radio 9 Telugu</h1>
             <hr>
             <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
-            <audio controls src="http://184.154.202.243:8310/stream"></audio>
+            <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio>
             <hr>
 </div>
 </div>
