--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,6 +3,8 @@
   <head>
     <style>
 
+    <meta name="google-site-verification" content="VnKXAe8yTsCLdUzCT8kSiwihu9fJFM4whHiPzohMRWw" />
+
         body {
           width: 1px;
           min-width: 100%;
@@ -74,8 +76,8 @@
             <audio controls src="http://50.7.99.163:11091/;"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 2: Spicy Radio</span></h2>
             <audio controls src="http://proxima.shoutca.st:8266/stream"></audio><br></br>
-            <h2><span class="badge badge-success">FM Station 3: Andhra Mirchi</span></h2>
-            <audio controls src="http://184.154.202.243:8310/stream"></audio><br></br>
+            <h2><span class="badge badge-success">FM Station 3: Telugu One</span></h2>
+            <audio controls src="http://173.203.133.187:9700/;"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 4: Radio 9</span></h2>
             <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio><br></br>
         </div>
