--- a/app/views/welcome/andhra_mirchi.html.erb
+++ b/app/views/welcome/andhra_mirchi.html.erb
@@ -32,9 +32,9 @@
           <p class="text-serif"><em>
             <h1 class="entry-title">Telugu One</h1>
             <hr>
-            <p>Telugu One is a Telugu radio having broadcasting from Andhra.Listen to Andhra Mirchi Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.This Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Telugu One Radio listen now.</p>
-<audio controls src="http://173.203.133.187:9700/;"></audio>
-<hr>
+            <p>Telugu One is a Telugu radio having broadcasting from Andhra.Listen to Telugu One Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.This Radio  contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Telugu One Radio listen now.</p>
+            <audio controls src="http://173.203.133.187:9700/;"></audio>
+            <hr>
 </div>
 </div>
 </div>
@@ -48,8 +48,8 @@
             <h1 class="entry-title">NRI Radio Telugu</h1>
             <hr>
             <p>Telugu NRI Radio is a Telugu radio having broadcasting from India.Listen to Telugu NRI Radio Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Telugu NRI Radio contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Telugu NRI Radio listen now.</p>
-<audio controls src="http://50.7.99.163:11091/;"></audio>
-<hr>
+            <audio controls src="http://50.7.99.163:11091/;"></audio>
+            <hr>
 </div>
 </div>
 </div>
@@ -62,7 +62,7 @@
           <p class="text-serif"><em>
             <h1 class="entry-title"> Radio 9 Telugu</h1>
             <hr>
-            <p class="text-serif"><em>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</em></p>
+            <p>Radio 9 Telugu is a Telugu radio having broadcasting from India.Listen to Radio 9 u Telugu FM to listen to your favorite Telugu songs and top Tollywood songs.Radio 9 Telugu contains a huge variety of programs telcasing wonderful Hindi songs.Tune to Radio 9 Telugu listen now.</p>
             <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio>
             <hr>
 </div>
