--- a/app/views/welcome/video_songs.html.erb
+++ b/app/views/welcome/video_songs.html.erb
@@ -65,6 +65,30 @@
       </div>
     </div>
     <div class="row mb-3">
+     <div class="col-sm-4">Chamak Chamak</div>
+      <div class="col-md-8">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/Fp1_dxjyXwo?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-3">
+     <div class="col-sm-4">Ga Gha Megha</div>
+      <div class="col-md-8">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/4gDYt1XPkkE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-3">
+     <div class="col-sm-4">Mandaara Mandaara</div>
+      <div class="col-md-8">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/fdgAMPzwqnU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="row mb-3">
      <div class="col-sm-4">Yevandoy Nani Gaaru</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
