audio somgs changed and scroll bar fixed again margins fixed

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -8,6 +8,9 @@
           min-width: 100%;
           *width: 100%;
         }
+        body{
+          overflow-y: hidden;
+        }
         #stage {
           height: 1px;
           overflow: auto;
@@ -21,7 +24,7 @@
 
         .card-img-top{
           height: 125px;
-          width: 150px;
+          width: 160px;
         }
 
         .fm{
@@ -127,12 +130,12 @@
             </div>
             <div class="col-lg-6 mb-3 mb-md-5">
               <div class="app-box-shadow">
-                <img src="/assets/manisharma.jpg">
+                <img src="/assets/anoop.jpg">
               </div>
             </div>
             <div class="col-lg-6 mb-3 mb-md-5">
               <div class="app-box-shadow">
-                <img src="/assets/anoop.jpg">
+                <img src="/assets/manisharma.jpg">
               </div>
             </div>
             <div class="col-lg-6 mb-3 mb-md-5">
