--- a/app/views/welcome/video_songs.html.erb
+++ b/app/views/welcome/video_songs.html.erb
@@ -15,7 +15,7 @@
       margin-left: 400px;
     }
     .song_images{
-      margin-left: 500px;
+      margin-left: 400px;
     }
 </style>
   </head>
@@ -27,7 +27,7 @@
       </span>
     </h3>
   </div>
-  <img class="song_images" src="/assets/top5.jpg" width:"100" height:"100";>
+  <img class="song_images" src="/assets/top10.jpg" width:"100" height:"100";>
     <div class="row mb-3">
      <div class="col-sm-4"> Lover Also Fighter Also</div>
       <div class="col-md-8">
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="row mb-3">
-     <div class="col-sm-4">Chusi Chunangane</div>
+     <div class="col-sm-4">Chusi Chudangane</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
           <iframe width="600" height="338" src="https://www.youtube.com/embed/_JVghQCWnRI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
@@ -93,18 +93,10 @@
       </div>
     </div>
     <div class="row mb-3">
-     <div class="col-sm-4">Yevandoy Nani Gaaru</div>
+     <div class="col-sm-4">Dum Dare</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/y9gUpVWcELU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-    <div class="row mb-3">
-     <div class="col-sm-4">Guravaram</div>
-      <div class="col-md-8">
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/1UeP5ovf_TY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/S9uw4fR9ZCI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
