sign up form added

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -24,7 +24,7 @@
 
         .card-img-top{
           height: 125px;
-          width: 160px;
+          width: 155px;
         }
 
         .fm{
@@ -310,14 +310,17 @@
                 <span>Sign Up Now</span>
               </span>
             </h1>
+
+            <form action="https://facebook.com/WeLoveTeluguMusic/" method="post">
             <div class="text-ribbon-inputs-split">
-              <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="First Name">
-              <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="Last Name">
+              <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="First Name" required>
+              <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="Last Name" required>
             </div>
-            <input type="text" class="h4 text-ribbon-input text-ribbon-input-half text-ribbon-primary" placeholder="Email">
-            <button type="button" class="btn btn-square btn-primary btn-lg btn-block">
-              Sign Up
+            <input type="email" class="h4 text-ribbon-input text-ribbon-input-half text-ribbon-primary" placeholder="Email" required>
+            <button type="submit" class="btn btn-square btn-primary btn-lg btn-block">
+              Sign Up !
             </button>
+          </form>
           </div>
         </div>
       </div>
