structured data added

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -32,6 +32,49 @@
         }
 
     </style>
+
+    <script type="application/ld+json">
+    <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [{
+    "@type": "ListItem",
+    "position": 1,
+    "item": {
+      "@id": "https://welovemusic.herokuapp.com/songs",
+      "name": "Devi Sri Prasad",
+      "image": "https://welovemusic.herokuapp.com/assets/dsp.jpg"
+    }
+  },{
+    "@type": "ListItem",
+    "position": 2,
+    "item": {
+      "@id": "https://welovemusic.herokuapp.com/video_songs",
+      "name": "Anirudh",
+      "image": "https://welovemusic.herokuapp.com/assets/anirudh.jpg"
+    }
+  },{
+    "@type": "ListItem",
+    "position": 3,
+    "item": {
+      "@id": "https://welovemusic.herokuapp.com/andhra_mirchi",
+      "name": "FM Radio",
+      "image": "https://welovemusic.herokuapp.com/assets/radio9.png"
+    }
+  },{
+    "@type": "ListItem",
+    "position": 4,
+    "item": {
+      "@id": "https://welovemusic.herokuapp.com/rayyi",
+      "name": "Lyrics",
+      "image": "https://welovemusic.herokuapp.com/assets/rayyi.jpg"
+    }
+  }]
+}
+</script>
+
+    </script>
   </head>
 
 <body>
