--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,11 +100,13 @@
               Artists
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">A R Rahman</a>
-              <a class="dropdown-item" href="#">Anirudh</a>
-              <a class="dropdown-item" href="#">Devi Sri Prasad </a>
-              <a class="dropdown-item" href="#">Arjith Singh </a>
-              <a class="dropdown-item" href="#">Honey Singh </a>
+              <a class="dropdown-item" <%= link_to 'A.R. Rahman', ar_rehman_path %></a>
+              <a class="dropdown-item" <%= link_to 'Devi Sri Prasad', dsp_path %></a>
+              <a class="dropdown-item" <%= link_to 'Mani Sharma', manisharma_path %></a>
+              <a class="dropdown-item" <%= link_to 'Ilayaraaja', ilayaraja_path %></a>
+              <a class="dropdown-item" <%= link_to 'Anirudh', anirudh_path %></a>
+              <a class="dropdown-item" <%= link_to 'Thaman S', thaman_path %></a>
+              <a class="dropdown-item" <%= link_to 'Anup Rubens', anoop_path %></a>
             </div>
           </li>
         </ul>
