--- a/app/views/welcome/merise.html.erb
+++ b/app/views/welcome/merise.html.erb
@@ -1,62 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-
-    <title>We Love Music</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-      <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Roboto:100,300,400,700" rel="stylesheet">
-      <link href="assets/toolkit-bold.css" rel="stylesheet">
-      <link href="assets/application-bold.css" rel="stylesheet">
-
-  <style type=text/css>
-
-        body {
-          width: 1px;
-          min-width: 100%;
-          *width: 100%;
-        }
-        #stage {
-          height: 1px;
-          overflow: auto;
-          min-height: 100vh;
-        }
-
-        .navbar-brand{
-          font-family:fantasy;
-          font-size: 200%;
-          font-weight: 900;
-
-        }
-        #para{
-          background-color: yellow;
-          font-size: 300%;
-        }
-
-        #merise{
-          padding-left: 250px;
-        }
-
-        #title{
-          color: white;
-        }
-        .col-md-8{
-          padding-left: 250px;
-        }
-
+    <style type=text/css>
+    #pic{
+      padding-left: 400px;
+    }
+    #title{
+      color: white;
+    }
+    .col-md-8{
+      padding-left: 350px;
+    }
     </style>
-  </head>
-
-
+    </head>
 <body>
-
-<img id="merise" src="/assets/hello.jpg" width:"100" height:"100";>
+<img id="pic" src="/assets/hello.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -72,7 +30,6 @@ in lead roles. Composed by Anup Rubens, sung by Shreya Ghoshal and lyrics writte
             </div>
           </div>
         </div>
-
         <p class="text-serif"><em>
         <p>Merise merise merise aa kannullo edo merise<br />
         Na manase murise murise aa sangathi naaku telusey<br />
@@ -137,17 +94,7 @@ in lead roles. Composed by Anup Rubens, sung by Shreya Ghoshal and lyrics writte
         Jorsey dol bhajao naa</p></em></p>
       </div>
     </div>
-
- </div>
-</div>
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
+   </div>
+  </div>
 </body>
 </html>
