--- a/app/views/welcome/teluse.html.erb
+++ b/app/views/welcome/teluse.html.erb
@@ -1,63 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
-
-    <title>We Love Music</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-      <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Roboto:100,300,400,700" rel="stylesheet">
-      <link href="assets/toolkit-bold.css" rel="stylesheet">
-      <link href="assets/application-bold.css" rel="stylesheet">
-
-  <style type=text/css>
-
-        body {
-          width: 1px;
-          min-width: 100%;
-          *width: 100%;
-        }
-        #stage {
-          height: 1px;
-          overflow: auto;
-          min-height: 100vh;
-        }
-
-        .navbar-brand{
-          font-family:fantasy;
-          font-size: 200%;
-          font-weight: 900;
-
-        }
-        #para{
-          background-color: yellow;
-          font-size: 300%;
-        }
-
-        #yenthara{
-          padding-left: 350px;
-        }
-
-        #title{
-          color: white;
-        }
-        .col-md-8{
-          padding-left: 350px;
-        }
-
+    <style type=text/css>
+    #pic{
+      padding-left: 400px;
+    }
+    #title{
+      color: white;
+    }
+    .col-md-8{
+      padding-left: 350px;
+    }
     </style>
   </head>
-
-
 <body>
-
-
-<img id="yenthara" src="/assets/breakup.jpg" width:"100" height:"100"
+<img id="yenthara" src="/assets/breakup.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
@@ -72,9 +29,7 @@
             </div>
           </div>
           <hr>
-          <h4> Lyrics:</h4></br>
-
-          <p><p>TelisenE naa nuvvE.. naa nuvvu kaadanee<br />
+        <p><p>TelisenE naa nuvvE.. naa nuvvu kaadanee<br />
 telisenE nee nenE.. nee nEnu kaananee<br />
 naalO sagam.. ika lEdoo anee<br />
 aa ninnalE.. nanu choosi navvelE<br />
@@ -107,17 +62,7 @@ i don't need the shit</p>
 telisenE nee nenE.. nee nEnu kaananee</p></em></p>
       </div>
     </div>
-
- </div>
-</div>
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
-</body>
+   </div>
+  </div>
+ </body>
 </html>
