css files created

--- a/app/views/welcome/video_songs.html.erb
+++ b/app/views/welcome/video_songs.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <style type=text/css>
-
+/*
     .col-md-8{
       margin-left:150px;
     }
@@ -16,7 +16,7 @@
     }
     .song_images{
       margin-left: 500px;
-    }
+    } */
 </style>
   </head>
   <body>
@@ -108,5 +108,6 @@
             </div>
           </div>
         </div>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
   </html>
