--- a/app/views/artists/ar_rehman.html.erb
+++ b/app/views/artists/ar_rehman.html.erb
@@ -1,5 +1,5 @@
 <html lang="en">
-  <head>
+  <!-- <head>
     <style type=text/css>
 
         #pic{
@@ -12,7 +12,7 @@
           padding-left: 350px;
         }
     </style>
-  </head>
+  </head> -->
 <body>
 <img id="pic" src="/assets/ar_rahman.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
@@ -35,5 +35,6 @@
     </div>
   </div>
 </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
