--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
       <link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Roboto:100,300,400,700" rel="stylesheet">
       <link href="assets/toolkit-bold.css" rel="stylesheet">
       <link href="assets/application-bold.css" rel="stylesheet">
+      <link href="assets/home.css" rel="stylesheet">
+      <link href="assets/heading.css" rel="stylesheet">
+      <link href="assets/main.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="/assets/music_icon.ico">
+
 
     <style>
 
