--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style>
+    <!-- <style>
     <meta name="google-site-verification" content="VnKXAe8yTsCLdUzCT8kSiwihu9fJFM4whHiPzohMRWw" />
-        body {
+        /* body { -->
           width: 1px;
           min-width: 100%;
           *width: 100%;
@@ -29,9 +29,9 @@
 
         .fm{
           float: left;
-        }
+        } */
 
-    </style>
+    <!-- </style> -->
     <script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -259,12 +259,12 @@
                           </div>
           <div class="col-md-5 offset-sm-7">
             <h1 class="block-title mb-4">
-               <span class="text-ribbon text-ribbon-primary">
+               <span class="text-ribbon text-ribbon-danger">
                 <span>Hand Picked</span>
               </span>
             </h1>
             <p class="lead">
-              <span class="text-ribbon text-ribbon-primary">
+              <span class="text-ribbon ">
                 <span>
                   Every album, song, and video is the very best in class.
                 </span>
@@ -289,7 +289,7 @@
         <div class="row">
           <div class="col-md-5">
             <h1 class="block-title mb-4">
-              <span class="text-ribbon">
+              <span class="text-ribbon text-ribbon-info">
                 <span>Music Videos</span>
               </span>
             </h1>
@@ -406,5 +406,6 @@
     </div>
   </div>
 </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
