--- a/app/views/welcome/kothaga.html.erb
+++ b/app/views/welcome/kothaga.html.erb
@@ -3,7 +3,7 @@
   <head>
       <style type=text/css>
       #pic{
-        padding-left: 400px;
+        padding-left: 200px;
       }
       #title{
         color: white;
@@ -111,5 +111,6 @@
     </div>
    </div>
   </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
