--- a/app/views/welcome/malli.html.erb
+++ b/app/views/welcome/malli.html.erb
@@ -1,6 +1,6 @@
 <html lang="en">
-  <head>
-    <style type=text/css>
+  <!-- <head> -->
+    <!-- <style type=text/css>
         #pic{
           padding-left: 400px;
         }
@@ -10,8 +10,8 @@
         .col-md-8{
           padding-left: 350px;
         }
-    </style>
-  </head>
+    </style> -->
+  <!-- </head> -->
 <body>
 <img id="pic" src="/assets/malli.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
@@ -52,5 +52,6 @@
     </div>
  </div>
 </div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
