--- a/app/views/welcome/merise.html.erb
+++ b/app/views/welcome/merise.html.erb
@@ -96,5 +96,6 @@ in lead roles. Composed by Anup Rubens, sung by Shreya Ghoshal and lyrics writte
     </div>
    </div>
   </div>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
