--- a/app/views/welcome/songs.html.erb
+++ b/app/views/welcome/songs.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <style>
+  <!-- <style>
   .song_images{
     margin-left: 420px;
     }
@@ -10,7 +10,7 @@
     .title{
       margin-left: 420px;
     }
-    </style>
+    </style> -->
 <body>
   <div class="title">
   <h3 class="block-title mb-4">
@@ -55,5 +55,6 @@
       </div>
     </div>
   </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
