--- a/app/views/welcome/teluse.html.erb
+++ b/app/views/welcome/teluse.html.erb
@@ -64,5 +64,6 @@ telisenE nee nenE.. nee nEnu kaananee</p></em></p>
     </div>
    </div>
   </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
  </body>
 </html>
